--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="css/dot-patter-container.css" rel="stylesheet" type="text/css" />
     <link href="css/hover-shape-container.css" rel="stylesheet" type="text/css" />
     <link href="css/rainbow-btn.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image" href="/media/favicon.png">
 </head>
 
 <body>
